--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "vue-style-loader": "^3.0.1",
     "vue-touch": "^1.1.0",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "extract-text-webpack-plugin": "^2.1.0"
+  },
+  "devDependencies": {
+    "extract-text-webpack-plugin": "^2.1.2"
   }
-
 }
